--- a/src/Style Sheet/style.css
+++ b/src/Style Sheet/style.css
@@ -356,3 +356,58 @@ aside {
     width: 5rem;
     height: 100%;
 }
+
+/* ==================================================== */
+.toggle-content {
+    background-color: #0b0f19;
+    position: absolute;
+    z-index: 3;
+    width: calc(100vw - 4rem);
+    height: 0;
+    border-radius: 0px 0px 30px 30px;
+    overflow: hidden;
+    top: 90px;
+    left: 2rem;
+}
+
+.height__full {
+    height: auto;
+}
+
+.content ul {
+    margin: 0;
+}
+
+.content {
+    padding: 1rem;
+}
+
+.content ul li a i {
+    font-size: 24px;
+    color: white;
+}
+
+.content ul li {
+    margin: 30px 0;
+}
+
+.content ul li h5 {
+    margin: 0;
+    font-size: 18px;
+}
+
+.content ul li a {
+    transition: var(--transition);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.coloring:hover i,
+.coloring:hover {
+    color: var(--iconHover);
+}
+
+.content ul li a:hover .content ul li a i {
+    transition: var(--transition);
+}
