--- a/src/Style Sheet/temp.css
+++ b/src/Style Sheet/temp.css
@@ -1,21 +1,28 @@
 .temp--dashboard {
     grid-template-columns: 7rem repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: 4.5rem repeat(3, 1fr);
+    align-items: center;
     grid-template-areas:
-        " aside     search   search     .       user "
-        " aside     s1       s1         s2      s2 "
+        " aside     search   search     si       user "
         " aside     s1       s1         s2      s2 "
         " aside     s3       s3         s4      s4 "
-        " aside     s3       s3         s4      s4 ";
+        " aside     s5       s5         s6      s6 ";
 }
 
 #Section1,
 #Section2,
 #Section3,
-#Section4 {
+#Section4,
+#Section5,
+#Section6 {
     padding: 2rem 2rem;
     background-color: var(--sections-background);
     border-radius: var(--grid-gap);
+}
+
+#sectionInfo {
+    grid-area: si;
+
 }
 
 #Section1 {
@@ -32,4 +39,103 @@
 
 #Section4 {
     grid-area: s4;
+}
+
+#Section5 {
+    grid-area: s5;
+}
+
+#Section6 {
+    grid-area: s6;
+}
+
+#User,
+.search {
+    height: 4rem;
+}
+
+.section-name h2 {
+    font-size: 22px;
+    background-color: var(--iconHover);
+    width: max-content;
+    padding: 15px 25px;
+    border-radius: 50rem;
+    margin: 0;
+}
+
+/* ================================================== */
+.day-and-date {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: var(--grid-gap);
+}
+
+.day-info h2 {
+    font-size: 21px;
+    background-color: var(--iconHover);
+    width: max-content;
+    padding: 15px 25px 15px 15px;
+    border-radius: 0 50rem 50rem 0;
+    margin: 0;
+}
+
+.day-info p {
+    margin: 10px 0 0 0;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.day-info p span {
+    color: white;
+}
+
+.day-image img {
+    width: 8rem;
+}
+
+.divider {
+    background-color: #0b0f19;
+    width: 100%;
+    height: 2px;
+    margin: var(--grid-gap) 0;
+}
+
+
+/* Weather Information */
+.weather-info {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.weather-styling {
+    text-align: center;
+    padding-right: 18px;
+    border-right: 2px solid #0b0f19;
+}
+
+.weather-styling h4 {
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.weather-styling h4 span {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.weather-styling h6 {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.weather-styling h6 span {
+    font-weight: 600;
+}
+
+.temp-chart canvas {
+    width: 100% !important;
+    height: 100% !important;
 }
