--- a/src/Style Sheet/media.css
+++ b/src/Style Sheet/media.css
@@ -311,7 +311,7 @@
     .temp-chart {
         width: 94% !important;
         margin: auto;
-        height: 100% !important;
+        height: 8rem !important;
     }
 
     .section-name h2 {
