starting JS of weekDaysSection

--- a/src/Style Sheet/media.css
+++ b/src/Style Sheet/media.css
@@ -153,6 +153,7 @@
             "   aside       cities          cities          cities          cities          cities     "
             "   aside       cities          cities          cities          cities          cities     "
         ;
+        gap: 35px;
     }
 
     .temp-chart {
