--- a/src/Style Sheet/weekDaysSection.css
+++ b/src/Style Sheet/weekDaysSection.css
@@ -15,6 +15,8 @@
 #Section4,
 #Section5,
 #Section6 {
+    height: 100%;
+    width: 100%;
     padding: 2rem 2rem;
     background-color: var(--sections-background);
     border-radius: var(--grid-gap);
